# math-modeling-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: basic_usage.py  gm11_demo.py  sensitivity_demo.py
scripts/: mm_eval.py  mm_optim.py  mm_predict.py  mm_stats.py  mm_utils.py  mm_visual.py
tests/: test_eval.py  test_optim.py
